`default-branch-button` - Fix overlap with other components (#7430)

--- a/source/features/default-branch-button.css
+++ b/source/features/default-branch-button.css
@@ -2,3 +2,8 @@
 .rgh-default-branch-button-group [data-component='text'] {
 	max-width: 80px;
 }
+
+.rgh-default-branch-button-container {
+	position: relative;
+	z-index: 1;
+}
